--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@next/mdx": "^13.5.4",
     "autoprefixer": "10.4.15",
     "bcryptjs": "^2.4.3",
     "eslint": "8.48.0",
@@ -16,11 +20,15 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.4.5",
     "next": "13.4.19",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "slug": "^8.2.3",
     "tailwindcss": "3.3.3"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10"
   }
 }
